Fixed lowestLength and firstUpper methods in PlantsItems so they dont break the website when values are undefined

--- a/src/styles/Plants/plants.scss
+++ b/src/styles/Plants/plants.scss
@@ -84,14 +84,14 @@
                 justify-content: space-between;
                 flex-direction: row;
                 align-items: center;
-                width: 70%;
+                width: 60%;
                 height: 40vh;
                 margin: 1em;
                // box-shadow: 0 14px 14px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);
 
                 &__image {
                     height: 100%;
-                    width: 25%;
+                    width: 35%;
                     border-radius: 5px;
                     background-position: center;
                     background-size: cover;
@@ -101,12 +101,19 @@
 
                 &__content {
                     height: 100%;
-                    width: 60%;
+                    width: 65%;
                     display: flex;
-                    flex-direction: column;
                     justify-content: center;
                     align-items: center;
                     color:rgb(45, 56, 26);
+
+                    &__wrapper {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: left;
+                        width: 80%;
+                        height: fit-content
+                    }
                 }
             }
         }
